--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Uniswap coding challenge App</title>
   </head>
-  <body>
+  <body class="dark:bg-slate-900">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
