--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Uniswap coding challenge App</title>
+  <title>Uniswap V2 Liquidity</title>
 </head>
 
 <body class="dark:bg-slate-900">
+  <div class="aurora-wrapper">
+    <div class="aurora one"></div>
+    <div class="aurora two"></div>
+    <div class="aurora three"></div>
+    <div class="aurora four"></div>
+  </div>
   <div id="spinner" class="spinner"></div>
   <div id="app">
   </div>
